# terminal

./: .editorconfig  .env.example  .eslintrc.js  .gitattributes  .lighthouserc.json  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PRIVACY_POLICY.md  README.md  RELEASE.md  TERMS_OF_SERVICE.md  alembic.ini  app.json  conftest.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eas.json  gunicorn.conf.py  package.json  pyproject.toml  pytest.ini  renovate.json  requirements.txt
.devcontainer/: devcontainer.json
.do/: app.yaml  deploy.sh
.github/: APP_STORE_CHECKLIST.md  CODEOWNERS  SECRETS_SETUP.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ai-workforce.yml  backend-ci.yml  codeql.yml  deploy-digitalocean.yml  docker-publish.yml  e2e-test.yml  load-test.yml  release-quality.yml  release.yml  security-scan.yml  store-publish.yml
alembic/versions/: 001_initial_schema.py
api/: __init__.py  main.py
api/core/: __init__.py  cache.py  config.py  db.py  email.py  logging_config.py  metrics.py  mfa.py  security.py  sentry.py  telemetry.py
api/middleware/: rate_limit.py  security.py
api/models/: __init__.py  saas_domain.py  subscription.py  user.py
api/realtime/: __init__.py  ws_manager.py  ws_routes.py
api/routes/: auth.py  deeplinks.py  gdpr.py  health.py  notifications.py  oauth.py  payments.py  users.py
app/: _layout.tsx  index.tsx  main.py
app/(tabs)/: _layout.tsx  ai.tsx  index.tsx
benchmarks/: perf_benchmark.py
core/: __init__.py  ai_workforce.py  chatbot.py  cybersecurity.py  quantum_core.py  seo_marketing.py
db/migrations/: alembic.ini  env.py
docs/: GO_TO_MARKET.md  OBSERVABILITY.md
fastlane/: Appfile  Fastfile
ios/: PrivacyInfo.xcprivacy
k8s/: deployment.yaml
mobile/: STORE_RELEASE_CHECKLIST.md
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
nginx/: nginx.conf
public/: cookie-consent.js  manifest.json  privacy.html  support.html  sw.js  terms.html
src/: App.tsx
tests/: conftest.py  load_test.js  test_api.py  test_auth.py  test_health.py  test_payments.py  test_unit.py
(+44 files in other folders)
