[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: integration tests requiring live services",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "B008"]
exclude = ["alembic/", ".venv/", "node_modules/"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
exclude = ["alembic/", "tests/"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "terminal-ai"
version = "1.0.0"
description = "Command Your World with AI"
requires-python = ">=3.12"
license = {text = "MIT"}
